<?xml version="1.0"?>
<package format="2">
  <name>reconcycle_franka_control</name>
  <version>0.7.1</version>
  <description>reconcycle version of franka_control that supports multiple robots controlled separately</description>
  <maintainer email="mihael.simonic@ijs.si">Mihael Simonic</maintainer>
  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/franka_control</url>
  <url type="repository">https://github.com/frankaemika/franka_ros</url>
  <url type="bugtracker">https://github.com/frankaemika/franka_ros/issues</url>
  <author>Jozef Stefan Institute</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>franka_control</depend>

</package>
